--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,1 +1,14 @@
 <h1>Flights</h1>
+<div class="form">
+  <%= form_with url: "/search", method: :get do |form| %>
+    <%= select_tag(:origin_id, options_for_select(@airport_options), prompt: "Origin") %>
+
+    <%= select_tag(:destination_id, options_for_select(@airport_options), prompt: "Destination") %>
+
+    <%= select_tag(:date, options_for_select(@date_options), prompt: "Date") %>
+
+    <%= select_tag(:passengers, options_for_select(1..10), prompt: "Passengers") %>
+
+    <%= form.submit "Search", :class => "button" %>
+  <% end %>
+</div>
