--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Flights</h1>
 <div class="form">
-  <%= form_with url: "/search", method: :get do |form| %>
+  <%= form_with url: "/flights", method: :get do |form| %>
     <%= select_tag(:origin_id, options_for_select(@airport_options), prompt: "Origin") %>
 
     <%= select_tag(:destination_id, options_for_select(@airport_options), prompt: "Destination") %>
