--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -9,7 +9,7 @@
         </div>
         <div class="choice">
           <%= form.label :destination_id %>
-          <%= select_tag(:destination_id, options_for_select(@airport_options)) %>
+          <%= select_tag(:destination_id, options_for_select(@airport_options, 2)) %>
         </div>
         <div class="choice">
           <%= form.label :date %>
