--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,2 +1,6 @@
-<h1>Bookings#new</h1>
-<p>Find me in app/views/bookings/new.html.erb</p>
+<h2>Bookings</h2>
+<%= @flight.time.strftime("%l:%M%P") %> -
+<%= (@flight.time + @flight.duration.minutes).strftime("%l:%M%P") %><br>
+<%= @flight.time.strftime("%m/%d/%Y") %><br>
+<%= @origin.code %><br>
+<%= @destination.code %><br>
