--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,15 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,500&family=Oswald:wght@300&display=swap" rel="stylesheet">
   </head>
 
   <body>
-    <%= yield %>
+    <div class="page">
+      <h1>West Coast Flights</h1>
+      <%= yield %>
+    </div>
   </body>
 </html>
