--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -18,4 +18,5 @@
             data-amount=<%= (@price * 100) %>
             data-locale="auto"></script>
   <% end %>
-</div>param
+  <%= render 'flight_summary' %>
+</div>
