--- a/app/assets/stylesheets/charges.css
+++ b/app/assets/stylesheets/charges.css
@@ -5,3 +5,12 @@
   gap: 5vw;
   justify-content: center;
 }
+
+.charges form {
+  height: 15vh;
+  width: min(430px, 43vw);
+  border-radius: 5px;
+  padding: 3vh;
+  font-size: 2vw;
+  background-color: white;
+}
