--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,4 +32,25 @@ h1 {
   background-image: url('westcoast.jpg');
   background-size: cover;
   background-repeat: no-repeat;
+  padding-left: 2vw;
+  padding-right: 2vw;
+  overflow-y: scroll;
+}
+
+.flight-summary {
+  background-color: white;
+  width: min(350px, 45vw);
+  height: fit-content;
+  padding: 4vh;
+  border-radius: 5px;
+  font-size: 2.5vh;
+  margin-bottom: auto;
+}
+
+.flight-info {
+  border: solid rgb(113, 113, 113) 1px;
+  border-radius: 4px;
+  padding: 1vw;
+  margin-bottom: 1vh;
+  margin-top: 1vh;
 }
