--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,2 +1,6 @@
-<h1>Charges</h1>
-<h2>Thanks, you paid <strong>$<%= @price %></strong>!</h2>
+<div class="charges">
+  <div class="container">
+    <h2>Booking confirmed.</h2>
+    <h2>Thanks, you paid <strong>$<%= @price %></strong>!</h2>
+  </div>
+</div>
